Analysis service refactored
